--- a/style.css
+++ b/style.css
@@ -13,7 +13,14 @@ h1 {
   font-weight: 700;
 }
 
+h2 {
+  color: hsl(234, 29%, 20%);
+  font-size: 48px;
+  font-weight: 700;
+}
+
 p {
+  color: hsl(234, 29%, 20%);
   line-height: 1.5rem;
 }
 
@@ -41,7 +48,7 @@ p {
   margin-bottom: 10px;
 }
 
-.email-registration form {
+.email-registration {
   display: grid;
   margin-top: 40px;
   gap: 8px;
@@ -73,7 +80,7 @@ p {
   border-radius: 8px;
   padding: 22px 40px 22px 40px;
   width: 100%;
-  margin-top: 16px;
+  margin-top: 6px;
   font-size: 14px;
 }
 
@@ -100,6 +107,37 @@ p {
   color: hsl(4, 100%, 67%);
   font-size: 12px;
   height: 13px;
+}
+
+.card-success {
+  background-color: white;
+  padding: 60px;
+  border-radius: 30px;
+  width: 380px;
+  display: none;
+}
+
+.card-success button {
+  font-size: 16px;
+  font-weight: 700;
+  color: white;
+  margin-top: 20px;
+  width: 100%;
+  padding: 20px 0px 20px 0px;
+  border-radius: 10px;
+  border: none;
+  background: rgb(252, 169, 175);
+  background: linear-gradient(
+    90deg,
+    rgba(252, 169, 175, 1) 0%,
+    rgba(255, 97, 80, 1) 100%
+  );
+  box-shadow: 0px 8px 20px rgb(252, 169, 175);
+}
+
+.card-success button:hover {
+  transform: scale(1.1);
+  cursor: grab;
 }
 
 @media (max-width: 950px) {
